# jimini

./: .env.example  DEPLOY.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
Documentación Inicial/: Documento de Arquitectura Técnica - Sistema con IA y Telegram V4.md  Documento de Arquitectura Técnica - Sistema de Gestión de Pendientes con IA y Telegram V3.md  Documento de Requerimientos Funcionales - Sistema Omnicanal V4.md  Documento de Requerimientos Funcionales - Sistema Omnicanal de Gestión de Pendientes con IA V3.md  NOTA_OPENSPEC.md
migrations/: 001_buffer_schema.sql  002_reclaim_function.sql  003_seed_config.sql  004_plantillas_recurrencia.sql  005_evaluar_recurrencias.sql  006_hostigamiento.sql
openspec/changes/more-unit-tests/: design.md  proposal.md
openspec/changes/testing-and-ci/: design.md  tasks.md
openspec/specs/hostigamiento-alertas/: spec.md
openspec/specs/ingesta-durable/: spec.md
openspec/specs/modo-descanso/: spec.md
openspec/specs/plantillas-recurrencia/: spec.md
openspec/specs/transcripcion-audio/: spec.md
openspec/specs/vista-linea-tiempo/: spec.md
src/jimini/: config.py  db.py  main.py
src/jimini/buffer/: lease.py  worker.py
src/jimini/hostigamiento/: callbacks.py  (+3 more)
tests/: test_build_keyboard.py  test_dlq.py  test_get_text_for_ia.py  test_groq_provider.py  test_hostigamiento_comandos.py  test_hostigamiento_core.py  test_lease.py  test_month_grid.py  test_recurrencia_callbacks.py  test_recurrencia_webhook.py  test_recurrencia_worker.py  test_storage.py  test_vista_linea_tiempo.py  test_worker_loop.py
(+30 files in other folders)
